<resources>
    <string name="app_name">Felanmälan</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="personNr">PersonNr</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="typ">Model</string>
    <string name="location">Location</string>
    <string name="select">Selected</string>
    <string name="report_error_bicycle">Report error Bicycle

    </string>

    <string name="name">FirebaseAuthApp</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="textview">TextView</string>
    <string name="title_activity_maps">Map</string>


    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>


</resources>


